--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,7 +25,8 @@ spring:
     show-sql: true # 控制台打印 SQL（开发/测试用，生产可关闭）
     properties:
       hibernate:
-        format_sql: true # 格式化 SQL（便于查看）
+        dialect: org.hibernate.dialect.MySQL8Dialect
+        default_schema: app_demo # 全局强制表名前缀为 app_demo.
     open-in-view: false # 关闭 OpenSessionInView（避免事务问题）
 
   # 3. Redis 配置（环境变量占位符，默认本地 Redis）这里遇到了一个错误，redis是集群，写成了单机连接池
@@ -64,6 +65,7 @@ logging:
   pattern:
 
     console: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{50} - %msg%n"
+
 
 
 
