--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,7 +12,8 @@ spring:
     username: ${SPRING_DATASOURCE_USERNAME:root}
     password: ${SPRING_DATASOURCE_PASSWORD:123456}
     driver-class-name: com.mysql.cj.jdbc.Driver
-
+    hikari:
+      connection-init-sql: USE app_demo;
   # 2. JPA 配置（简化数据库操作）
   jpa:
     hibernate:
@@ -21,6 +22,8 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
+        default_schema: app_demo  # 关键配置：全局强制带app_demo库名
+        format_sql: true  # 可选：格式化SQL日志，便于查看
     open-in-view: false # 关闭 OpenSessionInView（避免事务问题）
 
   # 3. Redis 配置（环境变量占位符，默认本地 Redis）这里遇到了一个错误，redis是集群，写成了单机连接池
@@ -59,6 +62,7 @@ logging:
   pattern:
 
     console: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{50} - %msg%n"
+
 
 
 
