--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,11 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional> <!-- 编译时依赖，减少包体积 -->
         </dependency>
+        <dependency>
+             <groupId>com.fasterxml.jackson.jackson.datatype</groupId>
+             <artifactId>jackson-datatype-jsr310</artifactId>
+             <version>2.13.0</version> <!-- 版本需与 Spring Boot 兼容，2.7.x 推荐 2.13.x -->
+         </dependency>
     </dependencies>
 
     <!-- 构建配置：确保打包成可执行 JAR，且路径匹配 Dockerfile -->
