--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,10 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional> <!-- 编译时依赖，减少包体积 -->
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+        </dependency>
     </dependencies>
 
     <!-- 构建配置：确保打包成可执行 JAR，且路径匹配 Dockerfile -->
